--- a/nginx.conf
+++ b/nginx.conf
@@ -30,7 +30,7 @@ http {
         server_name localhost;
 
         location / {
-            proxy_pass http://$BACKEND_IP; # Adjust port if needed
+            proxy_pass http://35.168.30.13; # Adjust port if needed
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
